      This fixes postinst-has-useless-call-to-ldconfig, postrm-has-useless-
      call-to-ldconfig and package-name-doesnt-match-sonames warnings.
    - debian/rules, debian/control: Added chrpath to Build-Depends and
      deleting all rpath info with chrpath in install-arch target. This
      fixes all binary-or-shlib-defines-rpath warnings.

 -- Manuel Prinz <debian@pinguinkiste.de>  Sun, 23 Dec 2007 17:28:39 +0100

openmpi (1.2.4-5) unstable; urgency=low

  [ Manuel Prinz ]
  * Several changes in the libopenmpi-dev package to correct the library
    soname links (Closes: #456721)

  [ Dirk Eddelbuettel ]
  * Debian build and upload

 -- Dirk Eddelbuettel <edd@debian.org>  Tue, 18 Dec 2007 20:00:53 -0600

openmpi (1.2.4-4) unstable; urgency=low

  [ Manuel Prinz ]
  * debian/rules: Several minor changes
    - Added cross-compilation support
    - Replaced (un)patch targets with dpatch's makefile snippet
  * debian/control: Changed Standards-Version to match latest policy
  * debian/control: Several cosmetic changes to control fields
    - XS-Vcs-*: Renamed fields to Vcs-*
    - XS-DM-Upload-Allowed: Added, allowing uploads for Debian Maintainers
    - Homepage: Newly added
    - Build-Depends: Removed libsysfs-dev (Closes: #449084)
    - Build-Depends: Removed automake
    - Uploaders: Added myself
  * Moved include files and libraries to /usr/lib/openmpi and use the "mpi"
    alternative. Thanks to Nicholas Breen for assistance! (Closes: #452047)

  [ Dirk Eddelbuettel ]
  * Debian build and upload

 -- Dirk Eddelbuettel <edd@debian.org>  Wed, 12 Dec 2007 09:40:29 -0600

openmpi (1.2.4-3) unstable; urgency=low

  [ Manuel Prinz ]
  * debian/control: Added openmpi-common to libopenmpi-dev's Depends
    (Closes: #445230)

  [ Dirk Eddelbuettel ]
  * Debian build and upload

 -- Dirk Eddelbuettel <edd@debian.org>  Sat, 06 Oct 2007 07:54:47 -0500

openmpi (1.2.4-2) unstable; urgency=low

  [ Manuel Prinz ]